# AI-Code-Samples

Automated-Logo-Generation/: .gitignore  Automated-Logo-Generation.ipynb  Readme.md  pyproject.toml
Genre-driven-storytelling/: .gitignore  Genre-driven-storytelling.ipynb  README.md  backup.ipynb  pyproject.toml
Genre-driven-storytelling/.ipynb_checkpoints/: README-checkpoint.md  pyproject-checkpoint.toml
Genre-driven-storytelling/assets/: storygenerator.excalidraw
Weather_AQI_MCP_Assistant/: .env  1_weather_server.py  2_Air_Quality_Index_server.py  3_LLM_inference_server.py  README.md  Weather_AQI_MCP_Assistant.ipynb  pyproject.toml
docs/: Getting-Started-with-uv.ipynb
