[project]
name = "project"
version = "0.1.0"
requires-python = ">=3.12.0"
dependencies = [
  # "torch>=2.7.0",
  # "torchvision>=0.22.0",
  # "pytorch-triton-xpu>=3.3.0 ; sys_platform == 'win32' or sys_platform == 'linux'",
  # "diffusers==0.33.1",
  # "transformers==4.51.3",
  # "jupyter==1.1.1",
  # "ipywidgets==8.1.7",
  # "huggingface-hub[hf-xet]>=0.32.4",
  # "accelerate>=1.7.0",
  # "protobuf>=6.31.1",
  # "sentencepiece>=0.2.0",

  "jupyter>=1.1.1",
  "torch>=2.7.1",
  "torchvision>=0.22.0",
  "pytorch-triton-xpu>=3.3.0 ; sys_platform == 'win32' or sys_platform == 'linux'",
  "diffusers>=0.33.1",
  "accelerate>=1.7.0",
  "transformers>=4.52.4",
  "huggingface-hub[hf-xet]>=0.32.4",
  "sentencepiece>=0.2.0",
  "protobuf>=6.31.1",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-xpu", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-xpu", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
pytorch-triton-xpu = [
  { index = "pytorch-xpu", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-xpu"
url = "https://download.pytorch.org/whl/xpu"
explicit = true
